--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* Temel stiller */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -17,8 +16,13 @@ body {
 }
 
 h1 {
+  margin-bottom: 10px;
+  white-space: nowrap;
+}
+
+.description {
   margin-bottom: 20px;
-  white-space: nowrap; /* Satır sonu gelince kelimeleri bölmeyi engeller */
+  font-size: 14px;
 }
 
 input[type="text"],
@@ -29,11 +33,11 @@ button {
   color: #000;
   border: none;
   margin-bottom: 10px;
-  width: 100%; /* Metin kutusu ve buton genişliği iki katına çıkarıldı */
+  width: 100%;
 }
 
 input[type="text"] {
-  margin-bottom: 10px; /* Metin kutusu ve buton arasında boşluk bırakmak için */
+  margin-bottom: 10px;
 }
 
 button {
@@ -68,7 +72,6 @@ button:hover {
   height: auto;
 }
 
-/* Mobil ekranlar için medya sorgusu */
 @media only screen and (max-width: 768px) {
   .container {
     display: flex;
@@ -78,7 +81,7 @@ button:hover {
 
   input[type="text"],
   button {
-    width: calc(100%); /* Metin kutusu ve buton genişliği eşitlenecek, kenar boşlukları da dikkate alınıyor */
+    width: calc(100%);
     margin-bottom: 10px;
   }
 }
